# android-xml-converter

./: CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  README.md  abx2xml.cpp  abxtool.cpp  build.rs  build.sh  meson.build  xml2abx.cpp
.github/workflows/: Idk.yml  bench.yml  build.yml
patches/: pretty_print.patch
src/: abx.cc  abx.h  abx.hpp  abx.rs  abx2xml.cpp  abx2xml.rs  abx_c.cc  lib.rs  xml2abx.cpp  xml2abx.rs
src/abx2xml/: cli_abx2xml.cc
src/cli/: abx2xml.cc  abx2xml.rs  xml2abx.cc  xml2abx.rs
src/cpp/abx2xml/: abx2xml.cc  abx2xml.hpp  cli_abx2xml.cc
src/cpp/xml2abx/: cli_xml2abx.cc  xml2abx.cc
src/xml2abx/: xml2abx.hpp
tests/: README.md  benchmark.py  diff.py  gen_xml.py  test.py
