[package]
name = "android-xml-converter"
version = "0.1.0"
edition = "2024"
authors = ["rhythmcache"]
description = "Rust-wrapper around libabx providing conversion between ABX and XML"
repository = "https://github.com/rhythmcache/android-xml-converter"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/rhythmcache/android-xml-converter"
keywords = ["abx", "xml", "android", "binary", "parser"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "src/**",
    "README.md",
    "LICENSE",
    "build.rs",
]

[lib]
name = "android_xml_converter"
path = "src/abx.rs"

[[bin]]
name = "abx2xml"
path = "src/cli/abx2xml.rs"

[[bin]]
name = "xml2abx"
path = "src/cli/xml2abx.rs"

[dependencies]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
